--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,9 @@
     ],
     "routes": [
       { "src": "/(.*)", "dest": "/" }
-    ]
+    ],
+    "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ]
   }
   
